--- a/web/templates/torrent/index.html.eex
+++ b/web/templates/torrent/index.html.eex
@@ -23,15 +23,11 @@
         <%= for tracker <- @filterData["trackers"] |> String.split(", ") do %>
           <% trackerID = tracker |> String.split(":") |> Enum.at(0) %>
           <li>
-            <input type="checkbox">
+            <input class="filterChckbox" type="checkbox">
             <label name="tracker"
                     id="<%= tracker %>"
-                    class="<%= if Map.has_key?(@params, "tracker") and String.contains?(@params["tracker"], trackerID) do
-                                    "custom-checked"
-                                  else
-                                    "custom-unchecked"
-                                  end %>"
-                    filterId="trackerID"
+                    class="custom-unchecked"
+                    filterId="<%= trackerID %>"
                  ><%= tracker |> String.split(":") |> Enum.at(1) %></label>
           </li>
         <% end %>
@@ -43,18 +39,10 @@
       <ul class="treeview">
         <%= for type <- @filterData["Type"] |> String.split(", ") do %>
           <li>
-            <input type="checkbox">
+            <input class="filterChckbox" type="checkbox">
             <label name="type"
                     filterId="<%= type %>"
-                    class="<%= if Map.has_key?(@params, "type") do
-                                 if String.contains?(@params["type"], type) do
-                                    "custom-checked"
-                                  else
-                                    "custom-unchecked"
-                                  end
-                               else
-                                 "custom-unchecked"
-                               end %>"
+                    class="custom-unchecked"
                  ><%= type %></label>
           </li>
         <% end %>
@@ -66,18 +54,10 @@
       <ul class="treeview">
         <%= for genre <- @filterData["Genre"] |> String.split(", ") do %>
            <li>
-             <input type="checkbox">
+             <input class="filterChckbox" type="checkbox">
              <label name="genre"
                     filterId="<%= genre %>"
-                    class="<%= if Map.has_key?(@params, "genre") do
-                                  if String.contains?(@params["genre"], genre) do
-                                    "custom-checked"
-                                  else
-                                    "custom-unchecked"
-                                  end
-                                else
-                                  "custom-unchecked"
-                                end %>"
+                    class="custom-unchecked"
                   ><%= genre %></label>
            </li>
         <% end %>
