--- a/web/templates/torrent/torrents.html.eex
+++ b/web/templates/torrent/torrents.html.eex
@@ -34,7 +34,13 @@
         </span>
         <span class="fixed_size13"><%= torrent.type %></span>
         <span class="fixed_size13"><%= torrent.genre %></span>
-        <span class="fixed_size13"><%=case torrent.json["Added"] do nil -> torrent.inserted_at; added -> added end %></span>
+        <span class="fixed_size13"><%=case torrent.json["Added"] do
+                                                nil -> case torrent.json["AddDate"] do
+                                                           nil -> torrent.inserted_at;
+                                                           added -> added
+                                                       end
+                                                added -> added
+                                            end %></span>
         <span class="fixed_size13"><%= case torrent.json["Size"] do nil -> torrent.json["Size:"]; size -> size end %></span>
       </div>
     </div>
