--- a/web/templates/torrent/torrentMedia.html.eex
+++ b/web/templates/torrent/torrentMedia.html.eex
@@ -23,7 +23,8 @@
         <div class="modal-viewer">
           <%= for img <- images do %>
             <div class="mySlides">
-              <img class="visibleImage lazy" data-src="images/remote/<%= decodeImg(img) %>"/>
+              <img id="<%= torrent.id %>visibleImage<%= Enum.find_index(images, fn(x) -> x == img end) +1 %>" class="visibleImage lazy" data-src="images/remote/<%= decodeImg(img) %>" data-zoom-image="images/remote/<%= decodeImg(img) %>"
+                onclick="zoomImg('<%= torrent.id %>visibleImage<%= Enum.find_index(images, fn(x) -> x == img end) +1 %>')"/>
             </div>
           <% end %>
 
