--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -28,5 +28,6 @@
     </div> <!-- /container -->
     <script>window.userToken = "<%= assigns[:user_id] %>"</script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="https://cdn.rawgit.com/igorlino/elevatezoom-plus/1.1.20/src/jquery.ez-plus.js"></script>
   </body>
 </html>
